--- a/DT-AD/resources/application.properties
+++ b/DT-AD/resources/application.properties
@@ -1,7 +1,7 @@
 # Supabase PostgreSQL
-spring.datasource.url=jdbc:postgresql://aws-1-us-west-1.pooler.supabase.com:6543/postgres
-spring.datasource.username=postgres.msmgidrxhugtelhcyqxf
-spring.datasource.password=pruebamaquinacafe
+spring.datasource.url=jdbc:postgresql://aws-1-eu-west-2.pooler.supabase.com:6543/postgres
+spring.datasource.username=postgres.nfrpvjicigxiyhievsut
+spring.datasource.password=ProyectoAD-DT
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA
