--- a/Boletines/hibernateSwagger/src/main/resources/application.properties
+++ b/Boletines/hibernateSwagger/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 app.version=1.0.0
 
-spring.datasource.url=jdbc:postgresql://10.0.9.108:5432/probas
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://aws-1-eu-west-1.pooler.supabase.com:6543/postgres
+spring.datasource.username=postgres.ychqrpoemkppluxbeiff
+spring.datasource.password=ProyectoACOP
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-server.port=8081
+server.port=8082
