--- a/Boletines/hibernateSwagger/src/main/resources/application.properties
+++ b/Boletines/hibernateSwagger/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 app.version=1.0.0
 
-spring.datasource.url=jdbc:postgresql://aws-1-eu-west-1.pooler.supabase.com:6543/postgres
+spring.datasource.url=jdbc:postgresql://aws-1-eu-west-1.pooler.supabase.com:6543/postgres?**prepareThreshold=0**
 spring.datasource.username=postgres.ychqrpoemkppluxbeiff
 spring.datasource.password=ProyectoACOP
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 server.port=8082
+
+
