--- a/Boletines/hibernateSwaggerMongoDb/src/main/resources/application.properties
+++ b/Boletines/hibernateSwaggerMongoDb/src/main/resources/application.properties
@@ -2,6 +2,7 @@ app.version=1.0.0
 server.port=8082
 spring.application.name=Gestor Alumnos Mongo VM
 
-spring.data.mongodb.uri=mongodb://vboxuser:vboxuser@10.0.12.52:5432/probas
+# Sin usuario ni contraseña, solo la IP, el puerto y el nombre de la DB
+spring.data.mongodb.uri=mongodb://10.0.12.52:27017/probas
 
 springdoc.swagger-ui.path=/swagger-ui/index.html
