--- a/Boletines/PostgresMongo/MongoChamador/pom.xml
+++ b/Boletines/PostgresMongo/MongoChamador/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>MongoChamador</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
