--- a/Boletines/PostgresMongo/MongoChamador/src/main/resources/application.properties
+++ b/Boletines/PostgresMongo/MongoChamador/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 app.version=1.0.0
 spring.application.nome=MongoChamador
-server.port=8085
+server.port=8080
+spring.data.mongodb.uri=mongodb://localhost:27017/mongochamadordb
+logging.level.org.springframework=INFO
+logging.level.com.seu.pacote=DEBUG
