--- a/Boletines/PostgresMongo/postgresEquiposXogadores/src/main/resources/application.properties
+++ b/Boletines/PostgresMongo/postgresEquiposXogadores/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 app.version=1.0.0
 
-spring.datasource.url=jdbc:postgresql://192.168.1.61:5432/probas
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
